kleine Veränderung index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Beispiele zum Kurs SS 2021</h1>
+    <h1>Beispiele zum Kurs Sommersemester 2021</h1>
 </body>
 </html>
