--- a/codecademy/introduction.html
+++ b/codecademy/introduction.html
@@ -36,9 +36,10 @@
     </div>
     <div id="media">
       <h2>Media</h2>
-      <img src="https://content.codecademy.com/courses/web-101/web101-image_brownbear.jpg"/>
+      <img src="https://content.codecademy.com/courses/web-101/web101-image_brownbear.jpg" alt="Figure of a Brown Bear"/>
     </div>
   </body>
+  
   
   
   
