--- a/codecademy/introduction.html
+++ b/codecademy/introduction.html
@@ -3,12 +3,6 @@
     <p>"Life is very short and what we have to do must be done in the now." - Audre Lorde </p>
 </body>
 <body>
-    <h1>Hello World</h1>
-    <div>
-    <p>This paragraph is a child of the body element</p>   
-    </div> 
-  </body>
-  <body>
     <h1>The Brown Bear</h1>
     <div id="introduction">
       <h2>About Brown Bears</h2>
@@ -36,9 +30,11 @@
     </div>
     <div id="media">
       <h2>Media</h2>
-      <img src="https://content.codecademy.com/courses/web-101/web101-image_brownbear.jpg" alt="Figure of a Brown Bear"/>
+      <img src="https://content.codecademy.com/courses/web-101/web101-image_brownbear.jpg" alt="A Brown Bear"/>
+      <video src="https://content.codecademy.com/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4" width="320" height="240" controls> Video not supported </video>
     </div>
   </body>
+  
   
   
   
