--- a/codecademy/standards.html
+++ b/codecademy/standards.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html></html>
-<!DOCTYPE html>
 <html>
   <head>
-  </head>
+    <title>Brown Bears</title>
+	</head>
   <body>
     <h1>The Brown Bear</h1>
     <div id="introduction">
@@ -38,3 +37,4 @@
     </div>
   </body>
 </html>
+
