--- a/codecademy/standards.html
+++ b/codecademy/standards.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-  <a href="./index.html">Brown Bear</a>
+  <a href="./standards.html">Brown Bear</a>
   <a href="./aboutme.html">About Me</a>
   <h1>The Brown Bear</h1>
   <ul>
