--- a/codecademy/aboutme.html
+++ b/codecademy/aboutme.html
@@ -24,3 +24,10 @@
   </p>
 </body>
 </html>
+<!DOCTYPE html>
+<html>
+<body>
+  <h1>Whitespace</h1>
+  <p> Whitespace and indentation make html documents easier to read</p>
+  </body>
+</html>
