--- a/codecademy/standards.html
+++ b/codecademy/standards.html
@@ -49,3 +49,13 @@
 
 </html>
 
+<!DOCTYPE html>
+<html>
+    <body>
+        <h1>Whitespace</h1>    
+        <div>  
+          <p>Whitespace and indentation make html documents easier to read. </p>
+        </div>
+      </body>
+</html>
+
