--- a/codecademy/standards.html
+++ b/codecademy/standards.html
@@ -58,4 +58,15 @@
         </div>
       </body>
 </html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Favorite Quotes</title>
+  </head>
+  <body>
+    <!--This is a comment-->
+    <p>Feet, what do I need you for when I have wings to fly?</p>
+    <p>- Frida Kahlo</p>
+  </body>
+</html>
 
