--- a/codecademy/standards.html
+++ b/codecademy/standards.html
@@ -16,7 +16,9 @@
   </ul>
   <div id="introduction">
     <h2>About Brown Bears</h2>
-    <p>The brown bear (<em>Ursus arctos</em>) is native to parts of northern Eurasia and North America. Its conservation status is currently <strong>Least Concern</strong>.<br /><br /> There are many subspecies within the brown bear species, including the
+    <p>The brown bear (<em>Ursus arctos</em>) is native to parts of northern Eurasia and North America. Its conservation
+      status is currently <strong>Least Concern</strong>.<br /><br /> There are many subspecies within the brown bear
+      species, including the
       Atlas bear and the Himalayan brown bear.</p>
     <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank">Learn More</a>
     <h3>Species</h3>
@@ -27,7 +29,9 @@
       <li>Nelsoni (extinct)</li>
     </ul>
     <h3>Features</h3>
-    <p>Brown bears are not always completely brown. Some can be reddish or yellowish. They have very large, curved claws and huge paws. Male brown bears are often 30% larger than female brown bears. They can range from 5 feet to 9 feet from head to toe.</p>
+    <p>Brown bears are not always completely brown. Some can be reddish or yellowish. They have very large, curved claws
+      and huge paws. Male brown bears are often 30% larger than female brown bears. They can range from 5 feet to 9 feet
+      from head to toe.</p>
   </div>
   <div id="habitat">
     <h2>Habitat</h2>
@@ -38,12 +42,15 @@
       <li>Canada</li>
     </ol>
     <h3>Countries with Small Brown Bear Populations</h3>
-    <p>Some countries with smaller brown bear populations include Armenia, Belarus, Bulgaria, China, Finland, France, Greece, India, Japan, Nepal, Poland, Romania, Slovenia, Turkmenistan, and Uzbekistan.</p>
+    <p>Some countries with smaller brown bear populations include Armenia, Belarus, Bulgaria, China, Finland, France,
+      Greece, India, Japan, Nepal, Poland, Romania, Slovenia, Turkmenistan, and Uzbekistan.</p>
   </div>
   <div id="media">
     <h2>Media</h2>
-    <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank"><img src="https://content.codecademy.com/courses/web-101/web101-image_brownbear.jpg"/></a>
-    <video src="https://content.codecademy.com/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4" height="240" width="320" controls>Video not supported</video>
+    <a href="https://en.wikipedia.org/wiki/Brown_bear" target="_blank"><img
+        src="https://content.codecademy.com/courses/web-101/web101-image_brownbear.jpg" /></a>
+    <video src="https://content.codecademy.com/courses/freelance-1/unit-1/lesson-2/htmlcss1-vid_brown-bear.mp4"
+      height="240" width="320" controls>Video not supported</video>
   </div>
 </body>
 
@@ -51,22 +58,26 @@
 
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1>Whitespace</h1>    
-        <div>  
-          <p>Whitespace and indentation make html documents easier to read. </p>
-        </div>
-      </body>
+
+<body>
+  <h1>Whitespace</h1>
+  <div>
+    <p>Whitespace and indentation make html documents easier to read. </p>
+  </div>
+</body>
+
 </html>
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Favorite Quotes</title>
-  </head>
-  <body>
-    <!--This is a comment-->
-    <p>Feet, what do I need you for when I have wings to fly?</p>
-    <p>- Frida Kahlo</p>
-  </body>
-</html>
 
+<head>
+  <title>Favorite Quotes</title>
+</head>
+
+<body>
+  <!--This is a comment-->
+  <p>Feet, what do I need you for when I have wings to fly?</p>
+  <p>- Frida Kahlo</p>
+</body>
+
+</html>
