--- a/nz/index.html
+++ b/nz/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webmapping Kurs SS 21</title>
+    <title>New Zealand Journey</title>
 </head>
 <body>
-    <h1>New Zealand Journey</h1>
+    <h1>Picton</h1>
+    <imghttps://pixabay.com/de/photos/wasser-natur-landschaft-himmel-3260961/
 </body>
 </html>
