links als liste lol

--- a/nz/index.html
+++ b/nz/index.html
@@ -7,6 +7,13 @@
     <title>New Zealand Journey</title>
 </head>
 <body>
-    <h1>Picton</h1>
+    <h1>Picton
+        Links: 
+        <ol>
+            <li>https://de.wikipedia.org/wiki/Picton_(Neuseeland)#/media/Datei:Picton_New_Zealand.JPG</li>
+            <li>https://pixabay.com/de/photos/wasser-natur-landschaft-himmel-3260961/</li>
+            <li>https://pixabay.com/de/photos/f%C3%A4hre-hafen-station-schiff-meer-2039040/</li>
+        </ol>
+    </h1>
 </body>
 </html>
