--- a/nz/index.html
+++ b/nz/index.html
@@ -9,8 +9,14 @@
 <body>
 
     <!-- header-Element mit: -->
-        <!-- Bild images/header.jpg 1280x365 Pixel von pixabay oder wikimedia mit sprechendem alt-Text -->
+        <div><!-- Bild images/header.jpg 1280x365 Pixel von pixabay oder wikimedia mit sprechendem alt-Text -->
+        <img src="images/header.jpg" alt="Picton Harbour" /> 
         <!-- Absatz mit Link zur Bildquelle (Bildautor als Linktext) -->
+        </div>
+        <div>
+            <title>New Zealand Journey: Picton</title>
+        </div>
+        </div>
         <!-- Überschrift 1 "New Zealand Journey: Etappentitel" -->
         <!-- nav-Element mit: -->
             <!-- Bild images/user.jpg 100x100 Pixel von euch, pixabay oder wikimedia mit sprechendem alt-Text - Bild als Link zur Bildquelle -->
