--- a/nz/index.html
+++ b/nz/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <!-- header-Element mit: -->
+ <div><!-- Bild images/header.jpg 1280x365 Pixel von pixabay oder wikimedia mit sprechendem alt-Text -->
+    <img src="images/header.jpg" alt="Picton Harbour" /> 
+    <div></div>
+    <!-- Absatz mit Link zur Bildquelle (Bildautor als Linktext) -->
+
+    <div>
+        <title>New Zealand Journey: Picton</title>
+    </div>
+    </div>
+    <!-- Überschrift 1 "New Zealand Journey: Etappentitel" -->
+    <!-- nav-Element mit: -->
+        <!-- Bild images/user.jpg 100x100 Pixel von euch, pixabay oder wikimedia mit sprechendem alt-Text - Bild als Link zur Bildquelle -->
+        <!-- address-Element mit: -->
+            <!-- E-Maillink mit Name als Linktext -->
+            <!-- Link zum github-Repo (Beides getrennt durch " - ")-->
+            <title><!-- New Zealand Journey: Etappentitel --></title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><!-- New Zealand Journey: Etappentitel --></title>
+   
 </head>
 <body>
 
-    <!-- header-Element mit: -->
-        <div><!-- Bild images/header.jpg 1280x365 Pixel von pixabay oder wikimedia mit sprechendem alt-Text -->
-        <img src="images/header.jpg" alt="Picton Harbour" /> 
-        <!-- Absatz mit Link zur Bildquelle (Bildautor als Linktext) -->
-        </div>
-        <div>
-            <title>New Zealand Journey: Picton</title>
-        </div>
-        </div>
-        <!-- Überschrift 1 "New Zealand Journey: Etappentitel" -->
-        <!-- nav-Element mit: -->
-            <!-- Bild images/user.jpg 100x100 Pixel von euch, pixabay oder wikimedia mit sprechendem alt-Text - Bild als Link zur Bildquelle -->
-            <!-- address-Element mit: -->
-                <!-- E-Maillink mit Name als Linktext -->
-                <!-- Link zum github-Repo (Beides getrennt durch " - ")-->
-
+   
     <!-- horizontale Linie -->
 
     <!-- main-Element mit: -->
