--- a/nz/index.html
+++ b/nz/index.html
@@ -4,15 +4,17 @@
  <!-- header-Element mit: -->
  <div><!-- Bild images/header.jpg 1280x365 Pixel von pixabay oder wikimedia mit sprechendem alt-Text -->
     <img src="images/header.jpg" alt="Picton Harbour" /> 
+    <a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank">Quelle: Wikimedia</a>
  </div>
- <div>
-    <a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank"></a>
- </div>
-    <!-- Absatz mit Link zur Bildquelle (Bildautor als Linktext) -->
 
     <div>
         <title>New Zealand Journey: Picton</title>
     </div>
+    <div>
+        <img src="images/user.jpg" alt="user"/>
+        <
+
+
     </div>
     <!-- Überschrift 1 "New Zealand Journey: Etappentitel" -->
     <!-- nav-Element mit: -->
