--- a/nz/index.html
+++ b/nz/index.html
@@ -4,15 +4,14 @@
  <!-- header-Element mit: -->
  <div><!-- Bild images/header.jpg 1280x365 Pixel von pixabay oder wikimedia mit sprechendem alt-Text -->
     <img src="images/header.jpg" alt="Picton Harbour" /> 
-    <a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank">Quelle: Wikimedia</a>
- </div>
+    <a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank"><br></p>Quelle: Wikimedia</a>
+    <title>New Zealand Journey: Picton</title>
+    </div>
 
     <div>
-        <title>New Zealand Journey: Picton</title>
-    </div>
-    <div>
         <img src="images/user.jpg" alt="user"/>
-        <
+        <br><a href="maximilian.w.ender@student.uibk.ac.at" target="_blank">Mail</a>
+        <br><a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank">Github</a>
 
 
     </div>
