--- a/nz/index.html
+++ b/nz/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <!-- header-Element mit: -->
- <div><!-- Bild images/header.jpg 1280x365 Pixel von pixabay oder wikimedia mit sprechendem alt-Text -->
-    <img src="images/header.jpg" alt="Picton Harbour" /> 
-    <a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank"><br>Quelle: Wikimedia</a>
+ <div>
     <title>New Zealand Journey: Picton</title>
+    <a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank">
+    <img src="images/header.jpg" alt="Picton Harbour" /></a> 
     </div>
 
     <div>
