--- a/nz/index.html
+++ b/nz/index.html
@@ -1,32 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <div>
     <title>New Zealand Journey: Picton</title>
     <a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank">
     <img src="images/header.jpg" alt="Picton Harbour" /></a> 
-    </div>
-
-    <div>
         <img src="images/user.jpg" alt="user"/>
         <br><a href="maximilian.w.ender@student.uibk.ac.at" target="_blank">Mail</a>
         <br><a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank">Github</a>
-
-
-    </div>
-    <!-- Überschrift 1 "New Zealand Journey: Etappentitel" -->
-    <!-- nav-Element mit: -->
-        <!-- Bild images/user.jpg 100x100 Pixel von euch, pixabay oder wikimedia mit sprechendem alt-Text - Bild als Link zur Bildquelle -->
-        <!-- address-Element mit: -->
-            <!-- E-Maillink mit Name als Linktext -->
-            <!-- Link zum github-Repo (Beides getrennt durch " - ")-->
-            <title><!-- New Zealand Journey: Etappentitel --></title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
 </head>
+<hr>
 <body>
+<title>Picton</title>
 
    
     <!-- horizontale Linie -->
