--- a/nz/index.html
+++ b/nz/index.html
@@ -11,7 +11,8 @@
 <hr>
 <body>
 <h1>Picton</h1>
-<p>Picton (<em>Māori: Waitohi</em>) is a town in the Marlborough Region of New Zealand's South Island. The town is located near the head of the Queen Charlotte Sound / Tōtaranui, 25 km (16 mi) north of Blenheim and 65 km (40 mi) west of Wellington. Waikawa lies just north-east of Picton and is considered to be a contiguous part of the Picton urban area.</p>
+<p>Picton (<em>Māori: Waitohi</em>) is a town in the Marlborough Region of New Zealand's South Island. The town is located near the head of the Queen Charlotte Sound / Tōtaranui, 25 km (16 mi) north of Blenheim and 65 km (40 mi) west of Wellington. Waikawa lies just north-east of Picton and is considered to be a contiguous part of the Picton urban area.</p> 
+<a href="https://en.wikipedia.org/wiki/Picton,_New_Zealand" target="_blank">Learn More</a>
 
    
     <!-- horizontale Linie -->
