--- a/nz/index.html
+++ b/nz/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <title>New Zealand Journey: Picton</title>
+</head>
+<header>
     <a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank">
     <img src="images/header.jpg" alt="Picton Harbour" /></a> 
         <img src="images/user.jpg" alt="user"/>
         <br><a href="maximilian.w.ender@student.uibk.ac.at" target="_blank">Mail</a>
         <br><a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank">Github</a>
-</head>
+</header>
 <hr>
 <body>
 <h1>Picton</h1>
