--- a/nz/index.html
+++ b/nz/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device.width, initial-scale=1.0">
 <head>
     <title>New Zealand Journey: Picton</title>
 </head>
 <header>
-    <a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank">
-    <img src="images/header.jpg" alt="Picton Harbour" /></a> 
+<img src="images/header.jpg" alt="Picton Harbour">
+    <p><a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank"></a></p>
         <img src="images/user.jpg" alt="user"/>
         <br><a href="maximilian.w.ender@student.uibk.ac.at" target="_blank">Mail</a>
         <br><a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank">Github</a>
