--- a/nz/index.html
+++ b/nz/index.html
@@ -9,13 +9,15 @@
 <header>
 <img src="images/header.jpg" alt="Picton Harbour">
     <p><a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank"></a></p>
-        <img src="images/user.jpg" alt="user"/>
+    <h1>New Zealand Journey: Picton</h1>
+    <nav>
+       <a <img src="images/user.jpg" alt="user"/></a>
         <br><a href="maximilian.w.ender@student.uibk.ac.at" target="_blank">Mail</a>
         <br><a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank">Github</a>
+    </nav>
 </header>
 <hr>
 <body>
-<h1>Picton</h1>
 <p>Picton (<em>Māori: Waitohi</em>) is a town in the Marlborough Region of New Zealand's South Island. The town is located near the head of the Queen Charlotte Sound / Tōtaranui, 25 km (16 mi) north of Blenheim and 65 km (40 mi) west of Wellington. Waikawa lies just north-east of Picton and is considered to be a contiguous part of the Picton urban area.</p> 
 <a href="https://en.wikipedia.org/wiki/Picton,_New_Zealand" target="_blank">Learn More</a>
 
