--- a/nz/index.html
+++ b/nz/index.html
@@ -8,11 +8,12 @@
 </head>
 <header>
 <img src="images/header.jpg" alt="Picton Harbour">
-    <p><a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank"></a></p>
+    <p><a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank">Kiwi Sonja</a></p>
     <h1>New Zealand Journey: Picton</h1>
     <nav>
-       <a <img src="images/user.jpg" alt="user"/></a>
-        <br><a href="maximilian.w.ender@student.uibk.ac.at" target="_blank">Mail</a>
+       <a href="https://commons.wikimedia.org/w/index.php?search=picton&title=Special%3ASearch&go=Go&ns0=1&ns6=1&ns12=1&ns14=1&ns100=1&ns106=1#/media/File:Westkirbycolumn.jpg">
+       img src="images/user.jpg" alt="user"/></a>
+        <br><a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank">Mail</a>
         <br><a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank">Github</a>
     </nav>
 </header>
