--- a/nz/index.html
+++ b/nz/index.html
@@ -11,14 +11,17 @@
     <p><a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank">Kiwi Sonja</a></p>
     <h1>New Zealand Journey: Picton</h1>
     <nav>
-       <a href="https://commons.wikimedia.org/w/index.php?search=picton&title=Special%3ASearch&go=Go&ns0=1&ns6=1&ns12=1&ns14=1&ns100=1&ns106=1#/media/File:Westkirbycolumn.jpg">
-       img src="images/user.jpg" alt="user"/></a>
-        <br><a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank">Mail</a>
+    <img src="images/user.jpg" alt="Picton">
+       <p><a href="https://commons.wikimedia.org/w/index.php?search=picton&title=Special%3ASearch&go=Go&ns0=1&ns6=1&ns12=1&ns14=1&ns100=1&ns106=1#/media/File:Westkirbycolumn.jpg"
+       target="_blank"></a></p>
+       <address>
+        <br><a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank">Mail</a> - 
         <br><a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank">Github</a>
+        </address>
     </nav>
 </header>
 <hr>
-<body>
+<main>
 <p>Picton (<em>Māori: Waitohi</em>) is a town in the Marlborough Region of New Zealand's South Island. The town is located near the head of the Queen Charlotte Sound / Tōtaranui, 25 km (16 mi) north of Blenheim and 65 km (40 mi) west of Wellington. Waikawa lies just north-east of Picton and is considered to be a contiguous part of the Picton urban area.</p> 
 <a href="https://en.wikipedia.org/wiki/Picton,_New_Zealand" target="_blank">Learn More</a>
 
@@ -47,7 +50,6 @@
         <!-- nav-Element mit: -->
             <!-- Link zur vorhergehenden Etappe nach dem Muster https://username.github.io/nz/ - Linktext ist der Name der Etappe (username siehe Etappenverteilung) -->
             <!-- Link zur nächsten Etappe nach dem Muster https://username.github.io/nz/ - Linktext ist der Name der Etappe (username siehe Etappenverteilung) -->
-
-</body>
+main>
 </html>
 
