--- a/nz/index.html
+++ b/nz/index.html
@@ -15,15 +15,16 @@
        <p><a href="https://commons.wikimedia.org/w/index.php?search=picton&title=Special%3ASearch&go=Go&ns0=1&ns6=1&ns12=1&ns14=1&ns100=1&ns106=1#/media/File:Westkirbycolumn.jpg"
        target="_blank"></a></p>
        <address>
-        <br><a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank">Mail</a> - 
-        <br><a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank">Github</a>
+        <a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank">Mail</a> - 
+        <a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank">Github</a>
         </address>
     </nav>
 </header>
 <hr>
 <main>
-<p>Picton (<em>Māori: Waitohi</em>) is a town in the Marlborough Region of New Zealand's South Island. The town is located near the head of the Queen Charlotte Sound / Tōtaranui, 25 km (16 mi) north of Blenheim and 65 km (40 mi) west of Wellington. Waikawa lies just north-east of Picton and is considered to be a contiguous part of the Picton urban area.</p> 
-<a href="https://en.wikipedia.org/wiki/Picton,_New_Zealand" target="_blank">Learn More</a>
+<h1>Picton</h1>
+<p>Picton (<em>Māori: Waitohi</em>) is a town in the Marlborough Region of New Zealand's South Island. The town is located near the head of the Queen Charlotte Sound / Tōtaranui, 25 km (16 mi) north of Blenheim and 65 km (40 mi) west of Wellington. Waikawa lies just north-east of Picton and is considered to be a contiguous part of the Picton urban area. Picton is a major hub in New Zealand's transport network, connecting the South Island road and rail network with ferries across Cook Strait to Wellington and the North Island. The Picton urban area has a population of 4,730 (June 2020),[1] making it the second-largest town in the Marlborough Region behind Blenheim. It is the easternmost town in the South Island with a population of at least 1,000 people. 
+(Quelle: <a href="https://en.wikipedia.org/wiki/Picton,_New_Zealand" target="_blank">Wikipedia</a></p>)
 
    
     <!-- horizontale Linie -->
