--- a/nz/index.html
+++ b/nz/index.html
@@ -51,6 +51,6 @@
         <!-- nav-Element mit: -->
             <!-- Link zur vorhergehenden Etappe nach dem Muster https://username.github.io/nz/ - Linktext ist der Name der Etappe (username siehe Etappenverteilung) -->
             <!-- Link zur nächsten Etappe nach dem Muster https://username.github.io/nz/ - Linktext ist der Name der Etappe (username siehe Etappenverteilung) -->
-main>
+</main>
 </html>
 
