--- a/nz/index.html
+++ b/nz/index.html
@@ -27,7 +27,8 @@
 (Quelle: <a href="https://en.wikipedia.org/wiki/Picton,_New_Zealand" target="_blank">Wikipedia</a>)</p>
 <h2>Overview of Picton Harbour</h2>
 <img src="images/attraction.jpg" alt="Picton Harbour">
-    <p><a href="https://commons.wikimedia.org/wiki/File:Arahura_ship_picton_nz_1.jpg" target="_blank"></a></p>
+<figcaption>Overview of Picton Harbour>
+    <a href="https://commons.wikimedia.org/wiki/File:Arahura_ship_picton_nz_1.jpg" target="_blank">Solarence</a></figcaption>
 
    
     <!-- horizontale Linie -->
