--- a/nz/index.html
+++ b/nz/index.html
@@ -27,7 +27,7 @@
 (Quelle: <a href="https://en.wikipedia.org/wiki/Picton,_New_Zealand" target="_blank">Wikipedia</a>)</p>
 <h2>Overview of Picton Harbour</h2>
 <img src="images/attraction.jpg" alt="Picton Harbour">
-<figcaption>Overview of Picton Harbour>
+<figcaption>Overview of Picton Harbour Picture:
     <a href="https://commons.wikimedia.org/wiki/File:Arahura_ship_picton_nz_1.jpg" target="_blank">Solarence</a></figcaption>
 
    
