--- a/nz/index.html
+++ b/nz/index.html
@@ -6,6 +6,7 @@
 <head>
     <title>New Zealand Journey: Picton</title>
 </head>
+<body>
 <header>
 <img src="images/header.jpg" alt="Picton Harbour">
     <p><a href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank">Kiwi Sonja</a></p>
@@ -39,9 +40,22 @@ Picton Harbor is a natural harbor in the Marlborough District on the South Islan
 <div></div>
 <h3>Links</h3>
 <ul>
-<li><a href="http://www.visitpicton.co.nz/" target="_blank"></li> 
-<li><a href="https://www.portmarlborough.co.nz/"></li>
+<li><a href="http://www.visitpicton.co.nz/" target="_blank">Visit Piction</a></li> 
+<li><a href="https://www.portmarlborough.co.nz/">Piction Harbour</a></li>
+<li></li>
+<li></li>
 </ul>
+</main>
+<hr>
+<footer> 
+<nav>
+<a hrf="https://elisakuntner.github.io/nz/index.html">&lt;&lt; Abel Tasman National Park </a>
+<a hrf="https://geo6371.github.io/nz/index.html">Wellington &gt;&gt; </a>
+</nav>
+
+</footer>
+</body>
+
 
 
    
@@ -69,6 +83,5 @@ Picton Harbor is a natural harbor in the Marlborough District on the South Islan
         <!-- nav-Element mit: -->
             <!-- Link zur vorhergehenden Etappe nach dem Muster https://username.github.io/nz/ - Linktext ist der Name der Etappe (username siehe Etappenverteilung) -->
             <!-- Link zur nächsten Etappe nach dem Muster https://username.github.io/nz/ - Linktext ist der Name der Etappe (username siehe Etappenverteilung) -->
-</main>
 </html>
 
