--- a/nz/index.html
+++ b/nz/index.html
@@ -40,48 +40,21 @@ Picton Harbor is a natural harbor in the Marlborough District on the South Islan
 <div></div>
 <h3>Links</h3>
 <ul>
-<li><a href="http://www.visitpicton.co.nz/" target="_blank">Visit Piction</a></li> 
+<li><a href="http://www.visitpicton.co.nz/">Visit Piction</a></li> 
 <li><a href="https://www.portmarlborough.co.nz/">Piction Harbour</a></li>
-<li></li>
-<li></li>
+<li><a href="https://www.lonelyplanet.com/new-zealand/marlborough-and-nelson/picton">Lonelyplanet</li>
+<li><a href="https://www.tripadvisor.com/ShowForum-g285728-i10671-Picton_Marlborough_Region_South_Island.html">TripAdvisor</li>
 </ul>
 </main>
 <hr>
 <footer> 
 <nav>
-<a hrf="https://elisakuntner.github.io/nz/index.html">&lt;&lt; Abel Tasman National Park </a>
-<a hrf="https://geo6371.github.io/nz/index.html">Wellington &gt;&gt; </a>
+<a hrf="https://elisakuntner.github.io/nz/">&lt;&lt; Abel Tasman National Park</a>
+<a hrf="https://geo6371.github.io/nz/">Wellington &gt;&gt; </a>
 </nav>
 
 </footer>
 </body>
-
-
-
-   
-    <!-- horizontale Linie -->
-
-    <!-- main-Element mit: -->
-        <!-- Überschrift 1 mit Etappentitel und "Teaser" -->
-        <!-- Absatz mit Beschreibung der Etappe aus der Wikipedia mit Link zur Quelle bei Wikipedia (Quelle: Link) -->
-
-        <!-- Überschrift 2 für ein Bild passend zur Etappe -->
-        <!-- Bild als figure-Element mit: -->
-            <!-- Bild images/attraction.jpg 900x600px und sprechendem alt-Text -->
-            <!-- Bildunterschrift als figcaption-Element mit Link auf Bildquelle und BildautorIn -->
-        <!-- Absatz mit Beschreibung des Bildes aus der Wikipedia mit Link zur Quelle bei Wikipedia (Quelle: Link) -->
-
-        <!-- Überschrift 3 mit dem Inhalt "Overview map" -->
-        <!-- div-Element ohne Inhalt -->
-
-        <!-- Überschrift 3 mit dem Inhalt "Links" -->
-        <!-- ungeordnete Liste mit mindestens 4 Links passend zum Thema der Etappe -->
-
-    <!-- horizontale Linie -->
-
-    <!-- footer-Element mit: -->
-        <!-- nav-Element mit: -->
-            <!-- Link zur vorhergehenden Etappe nach dem Muster https://username.github.io/nz/ - Linktext ist der Name der Etappe (username siehe Etappenverteilung) -->
-            <!-- Link zur nächsten Etappe nach dem Muster https://username.github.io/nz/ - Linktext ist der Name der Etappe (username siehe Etappenverteilung) -->
+<hr>
 </html>
 
