--- a/nz/index.html
+++ b/nz/index.html
@@ -42,17 +42,16 @@ Picton Harbor is a natural harbor in the Marlborough District on the South Islan
 <ul>
 <li><a href="http://www.visitpicton.co.nz/">Visit Piction</a></li> 
 <li><a href="https://www.portmarlborough.co.nz/">Piction Harbour</a></li>
-<li><a href="https://www.lonelyplanet.com/new-zealand/marlborough-and-nelson/picton">Lonelyplanet</li>
-<li><a href="https://www.tripadvisor.com/ShowForum-g285728-i10671-Picton_Marlborough_Region_South_Island.html">TripAdvisor</li>
+<li><a href="https://www.lonelyplanet.com/new-zealand/marlborough-and-nelson/picton">Lonelyplanet</a></li>
+<li><a href="https://www.tripadvisor.com/ShowForum-g285728-i10671-Picton_Marlborough_Region_South_Island.html">TripAdvisor</a></li>
 </ul>
 </main>
 <hr>
 <footer> 
 <nav>
-<a hrf="https://elisakuntner.github.io/nz/">&lt;&lt; Abel Tasman National Park</a>
-<a hrf="https://geo6371.github.io/nz/">Wellington &gt;&gt; </a>
+<a href="https://elisakuntner.github.io/nz/">&lt;&lt; Abel Tasman National Park</a>
+<a href="https://geo6371.github.io/nz/">Wellington &gt;&gt; </a>
 </nav>
-
 </footer>
 </body>
 <hr>
