--- a/nz/index.html
+++ b/nz/index.html
@@ -29,7 +29,7 @@
 <h2>Overview of Picton Harbour</h2>
 <img src="images/attraction.jpg" alt="Picton Harbour">
 <figure>
-<figcaption>Overview of Picton Harbour Picture:
+<figcaption><strong>Overview of Picton Harbour Picture:</strong>
     <a href="https://commons.wikimedia.org/wiki/File:Arahura_ship_picton_nz_1.jpg" target="_blank">Solarence</a></figcaption>
 </figure>
 <p>
