--- a/nz/index.html
+++ b/nz/index.html
@@ -25,7 +25,7 @@
 <main>
 <h1>Picton</h1>
 <p>Picton (<em>Māori: Waitohi</em>) is a town in the Marlborough Region of New Zealand's South Island. The town is located near the head of the Queen Charlotte Sound / Tōtaranui, 25 km (16 mi) north of Blenheim and 65 km (40 mi) west of Wellington. Waikawa lies just north-east of Picton and is considered to be a contiguous part of the Picton urban area. Picton is a major hub in New Zealand's transport network, connecting the South Island road and rail network with ferries across Cook Strait to Wellington and the North Island. The Picton urban area has a population of 4,730 (June 2020), making it the second-largest town in the Marlborough Region behind Blenheim. It is the easternmost town in the South Island with a population of at least 1,000 people. 
-(Quelle: <a href="https://en.wikipedia.org/wiki/Picton,_New_Zealand" target="_blank">Wikipedia</a>)</p>
+(Source: <a href="https://en.wikipedia.org/wiki/Picton,_New_Zealand" target="_blank">Wikipedia</a>)</p>
 <h2>Overview of Picton Harbour</h2>
 <img src="images/attraction.jpg" alt="Picton Harbour">
 <figure>
@@ -34,7 +34,7 @@
 </figure>
 <p>
 Picton Harbor is a natural harbor in the Marlborough District on the South Island of New Zealand. Picton Harbor is located between Queen Charlotte Sound and Picton, which is the end point of the natural harbor. The elongated body of water has a north-northeast orientation and, including the marina, is around 2.4 km long, with a maximum width of around 700 m and an approximately 750 m wide port entrance. The coastline extends for around 6.2 km. Around 250 m in front of the port entrance is the 128 m × 85 m large Mabel Island, which must be taken into account when entering the natural harbor.
-(Quelle: <a href="https://de.wikipedia.org/wiki/Picton_Harbour#cite_note-Google_Earth-2" target="_blank">Wikipedia</a>)
+(Source: <a href="https://de.wikipedia.org/wiki/Picton_Harbour#cite_note-Google_Earth-2" target="_blank">Wikipedia</a>)
 </p>
 <h3>Overview Map</h3>
 <div></div>
