--- a/codecademy/css_setup/index.html
+++ b/codecademy/css_setup/index.html
@@ -52,9 +52,12 @@
 </html>
 <!DOCTYPE html>
 <html>
-<p style="font-family: Arial;">
+
 <head>
+  <style>
+    p{font-family: Arial;}
   <title>Vacation World</title>
+  </style>
 </head>
 
 <body>
