--- a/codecademy/css_setup/index.html
+++ b/codecademy/css_setup/index.html
@@ -58,10 +58,9 @@
   rel="stylesheet">
   <title>Vacation World</title>
 </head>
-
 <body>
   <img src="https://content.codecademy.com/courses/freelance-1/unit-2/explorer.jpeg" />
-  <h1 class="title">Top Vacation Spots</h1>
+  <h1 class="title uppercase">Top Vacation Spots</h1>
   <h5>By: Stacy Gray</h5>
   <h6>Published: 2 Days Ago</h6>
 
@@ -112,3 +111,4 @@
 </body>
 
 </html>
+
