--- a/codecademy/css_setup/index.html
+++ b/codecademy/css_setup/index.html
@@ -1,57 +1,5 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,100' rel='stylesheet' type='text/css'>
-<link href="style.css" type="text/css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="header">
-      <div class="container">
-        <h1>Innovation Cloud</h1>
-        <p>Connect your ideas globally</p>
-        <a class="btn" href="#">Learn More</a>
-      </div>
-    </div>
-
-    <div class="nav">
-      <div class="container">
-        <ul>
-          <li>Register</li>
-          <li>Schedule</li>
-          <li>Sponsors</li>
-          <li>About</li>
-          <li>Contact</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="main">
-      <div class="container">
-        <img src="https://content.codecademy.com/projects/innovation-cloud/cloud.svg" height="128" width="196">
-        <h2>The Innovation Cloud Conference</h2>
-        <p>Connect with the best minds across a wide range of industries to share ideas and brainstorm new solutions to challenging problems.</p>
-        <p>Hear industry leaders talk about what worked (and what didn't) so that you can save time on your most challenging projects.</p>
-        <p>Learn about the latest research and technologies that you can use immediately to invent the future.</p>
-      </div>
-    </div>
-
-    <div class="jumbotron">
-      <div class="container">
-        <h2>Stay Connected</h2>
-        <p>Receive weekly insights from industry insiders.</p>
-        <a class="btn" href="#">Join</a>
-      </div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <p>&copy; Innovation Cloud Conference</p>
-      </div>
-    </div>
-  </body>
-</html>
-<!DOCTYPE html>
-<html>
 
 <head>
   <link href="./style.css" type="text/css"
@@ -60,7 +8,7 @@
 </head>
 <body>
   <img src="https://content.codecademy.com/courses/freelance-1/unit-2/explorer.jpeg" />
-  <h1 class="title uppercase">Top Vacation Spots</h1>
+  <h1 id="article-title"class="title uppercase">Top Vacation Spots</h1>
   <h5>By: Stacy Gray</h5>
   <h6>Published: 2 Days Ago</h6>
 
@@ -111,4 +59,3 @@
 </body>
 
 </html>
-
