--- a/nz/index.html
+++ b/nz/index.html
@@ -4,6 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device.width, initial-scale=1.0">
 <head>
+    <link rel="stylesheet" href="style.css">
     <title>New Zealand Journey: Picton</title>
 </head>
 <body>
