--- a/nz/index.html
+++ b/nz/index.html
@@ -38,7 +38,7 @@ Picton Harbor is a natural harbor in the Marlborough District on the South Islan
 (Source: <a href="https://de.wikipedia.org/wiki/Picton_Harbour#cite_note-Google_Earth-2" target="_blank">Wikipedia</a>)
 </p>
 <h3>Overview Map</h3>
-<div></div>
+<div> id="map" </div>
 <h3>Links</h3>
 <ul>
 <li><a href="http://www.visitpicton.co.nz/">Visit Piction</a></li> 
@@ -46,8 +46,8 @@ Picton Harbor is a natural harbor in the Marlborough District on the South Islan
 <li><a href="https://www.lonelyplanet.com/new-zealand/marlborough-and-nelson/picton">Lonelyplanet</a></li>
 <li><a href="https://www.tripadvisor.com/ShowForum-g285728-i10671-Picton_Marlborough_Region_South_Island.html">TripAdvisor</a></li>
 </ul>
-</main>
 <hr>
+</main>
 <footer> 
 <nav>
 <a href="https://elisakuntner.github.io/nz/">&lt;&lt; Abel Tasman National Park </a>
