--- a/nz/index.html
+++ b/nz/index.html
@@ -28,8 +28,8 @@
 <p>Picton (<em>Māori: Waitohi</em>) is a town in the Marlborough Region of New Zealand's South Island. The town is located near the head of the Queen Charlotte Sound / Tōtaranui, 25 km (16 mi) north of Blenheim and 65 km (40 mi) west of Wellington. Waikawa lies just north-east of Picton and is considered to be a contiguous part of the Picton urban area. Picton is a major hub in New Zealand's transport network, connecting the South Island road and rail network with ferries across Cook Strait to Wellington and the North Island. The Picton urban area has a population of 4,730 (June 2020), making it the second-largest town in the Marlborough Region behind Blenheim. It is the easternmost town in the South Island with a population of at least 1,000 people. 
 (Source: <a href="https://en.wikipedia.org/wiki/Picton,_New_Zealand" target="_blank">Wikipedia</a>)</p>
 <h2>Overview of Picton Harbour</h2>
-<img src="images/attraction.jpg" alt="Picton Harbour">
 <figure>
+    <img src="images/attraction.jpg" alt="Picton Harbour">
 <figcaption><strong>Overview of Picton Harbour Picture:</strong>
     <a href="https://commons.wikimedia.org/wiki/File:Arahura_ship_picton_nz_1.jpg" target="_blank">Solarence</a></figcaption>
 </figure>
@@ -38,7 +38,7 @@ Picton Harbor is a natural harbor in the Marlborough District on the South Islan
 (Source: <a href="https://de.wikipedia.org/wiki/Picton_Harbour#cite_note-Google_Earth-2" target="_blank">Wikipedia</a>)
 </p>
 <h3>Overview Map</h3>
-<div> id="map" </div>
+<div> id="Map" </div>
 <h3>Links</h3>
 <ul>
 <li><a href="http://www.visitpicton.co.nz/">Visit Piction</a></li> 
@@ -50,8 +50,8 @@ Picton Harbor is a natural harbor in the Marlborough District on the South Islan
 </main>
 <footer> 
 <nav>
-<a href="https://elisakuntner.github.io/nz/">&lt;&lt; Abel Tasman National Park </a>
-<a href="https://geo6371.github.io/nz/">Wellington &gt;&gt; </a>
+<a class="back" href="https://elisakuntner.github.io/nz/">&lt;&lt; Abel Tasman National Park </a>
+<a class="next" href="https://geo6371.github.io/nz/">Wellington &gt;&gt; </a>
 </nav>
 </footer>
 </body>
