new attraction für schöne website (900 px breite)

--- a/nz/index.html
+++ b/nz/index.html
@@ -38,7 +38,7 @@ Picton Harbor is a natural harbor in the Marlborough District on the South Islan
 (Source: <a href="https://de.wikipedia.org/wiki/Picton_Harbour#cite_note-Google_Earth-2" target="_blank">Wikipedia</a>)
 </p>
 <h3>Overview Map</h3>
-<div> id="Map" </div>
+<div id="map" ></div>
 <h3>Links</h3>
 <ul>
 <li><a href="http://www.visitpicton.co.nz/">Visit Piction</a></li> 
