--- a/nz/index.html
+++ b/nz/index.html
@@ -31,7 +31,7 @@
 <figure>
     <img src="images/attraction.jpg" alt="Picton Harbour">
 <figcaption><strong>Overview of Picton Harbour Picture:</strong>
-    <a href="https://commons.wikimedia.org/wiki/File:Arahura_ship_picton_nz_1.jpg" target="_blank">Solarence</a></figcaption>
+    <a href="https://commons.wikimedia.org/wiki/File:Picton_Harbour_(6724479431).jpg" target="_blank">Sid Mosdell</a></figcaption>
 </figure>
 <p>
 Picton Harbor is a natural harbor in the Marlborough District on the South Island of New Zealand. Picton Harbor is located between Queen Charlotte Sound and Picton, which is the end point of the natural harbor. The elongated body of water has a north-northeast orientation and, including the marina, is around 2.4 km long, with a maximum width of around 700 m and an approximately 750 m wide port entrance. The coastline extends for around 6.2 km. Around 250 m in front of the port entrance is the 128 m × 85 m large Mabel Island, which must be taken into account when entering the natural harbor.
