--- a/nz/index.html
+++ b/nz/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device.width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+<link rel="stylesheet" href="style.css">
     <title>New Zealand Journey: Picton</title>
 </head>
 <body>
@@ -17,8 +18,8 @@
        <a href="https://commons.wikimedia.org/w/index.php?search=picton&title=Special%3ASearch&go=Go&ns0=1&ns6=1&ns12=1&ns14=1&ns100=1&ns106=1#/media/File:Westkirbycolumn.jpg"
        target="_blank"></a>
        <address>
-        <a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank">Mail</a> - 
-        <a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank">Github</a>
+        <a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank"><i class="fas fa-envelope-square"></i>Maximilian Ender</a> - 
+        <a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank"><i class="fab fa-github"></i>Github Repos</a>
         </address>
     </nav>
 </header>
