--- a/nz/index.html
+++ b/nz/index.html
@@ -6,29 +6,30 @@
 <meta name="viewport" content="width=device.width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 <link rel="stylesheet" href="style.css">
-    <title>New Zealand Journey: Picton</title>
+    <title>NZJ: Picton</title>
 </head>
 <body>
 <header>
 <img src="images/header.jpg" alt="Picton Harbour">
     <p><a class="white" href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank"> <i class="fas fa-camera"></i> Kiwi Sonja</a></p>
-    <h1>New Zealand Journey: Picton</h1>
+    <h1>New Zealand Journey: Picton/Waitohi</h1>
     <nav>
     <img src="images/user.jpg" alt="Picton">
        <a href="https://commons.wikimedia.org/w/index.php?search=picton&title=Special%3ASearch&go=Go&ns0=1&ns6=1&ns12=1&ns14=1&ns100=1&ns106=1#/media/File:Westkirbycolumn.jpg"
        target="_blank"></a>
        <address>
-        <a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank"><i class="fas fa-envelope-square"></i> Maximilian Ender</a> - 
+        <a href="https://www.instagram.com/dontstealmyspots_/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a> - 
+        <a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank"><i class="fas fa-envelope-square"></i> Mail</a>  -
         <a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank"><i class="fab fa-github"></i> Github Repos</a>
         </address>
     </nav>
 </header>
 <hr>
 <main>
-<h1>Picton</h1>
+<h1>Picton - A Pearl of New Zealand</h1>
 <p>Picton (<em>Māori: Waitohi</em>) is a town in the Marlborough Region of New Zealand's South Island. The town is located near the head of the Queen Charlotte Sound / Tōtaranui, 25 km (16 mi) north of Blenheim and 65 km (40 mi) west of Wellington. Waikawa lies just north-east of Picton and is considered to be a contiguous part of the Picton urban area. Picton is a major hub in New Zealand's transport network, connecting the South Island road and rail network with ferries across Cook Strait to Wellington and the North Island. The Picton urban area has a population of 4,730 (June 2020), making it the second-largest town in the Marlborough Region behind Blenheim. It is the easternmost town in the South Island with a population of at least 1,000 people. 
 (Source: <a href="https://en.wikipedia.org/wiki/Picton,_New_Zealand" target="_blank">Wikipedia</a>)</p>
-<h2>Overview of Picton Harbour</h2>
+<h2>Picton Harbour</h2>
 <figure> 
     <img src="images/attraction.jpg" 
     alt="Picton Harbour">
