--- a/nz/index.html
+++ b/nz/index.html
@@ -11,16 +11,16 @@
 <body>
 <header>
 <img src="images/header.jpg" alt="Picton Harbour">
-    <p><a class="white" href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank"> <i class="fas fa-camera"></i> Kiwi Sonja</a></p>
+    <p><a class="white" href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank"> <i class="fas fa-camera mr-3"></i>Kiwi Sonja</a></p>
     <h1>New Zealand Journey: Picton/Waitohi</h1>
     <nav>
     <img src="images/user.jpg" alt="Picton">
        <a href="https://commons.wikimedia.org/w/index.php?search=picton&title=Special%3ASearch&go=Go&ns0=1&ns6=1&ns12=1&ns14=1&ns100=1&ns106=1#/media/File:Westkirbycolumn.jpg"
        target="_blank"></a>
        <address>
-        <a href="https://www.instagram.com/dontstealmyspots_/" target="_blank"><i class="fab fa-instagram"></i> Instagram</a> - 
-        <a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank"><i class="fas fa-envelope-square"></i> Mail</a>  -
-        <a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank"><i class="fab fa-github"></i> Github Repos</a>
+        <a href="https://www.instagram.com/dontstealmyspots_/" target="_blank"><i class="fab fa-instagram mr-3"></i>Instagram</a> - 
+        <a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank"><i class="fas fa-envelope-square"></i>Mail</a>  -
+        <a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank"><i class="fab fa-github mr-3"></i>Github Repos</a>
         </address>
     </nav>
 </header>
@@ -33,7 +33,7 @@
 <figure> 
     <img src="images/attraction.jpg" 
     alt="Picton Harbour">
-<figcaption><i class="fas fa-camera"></i> <strong>Overview of Picton Harbour Picture:</strong>
+<figcaption><i class="fas fa-camera mr-3"></i><strong>Overview of Picton Harbour Picture:</strong>
     <a href="https://commons.wikimedia.org/wiki/File:Picton_Harbour_(6724479431).jpg" target="_blank">Sid Mosdell</a></figcaption>
 </figure>
 <p>
@@ -53,8 +53,8 @@ Picton Harbor is a natural harbor in the Marlborough District on the South Islan
 </main>
 <footer> 
 <nav>
-<a class="back" href="https://elisakuntner.github.io/nz/"> <i class="fas fa-long-arrow-alt-left"></i>  Abel Tasman National Park </a>
-<a class="next" href="https://geo6371.github.io/nz/">Wellington <i class="fas fa-long-arrow-alt-right"></i> </a>
+<a class="back" href="https://elisakuntner.github.io/nz/"> <i class="fas fa-long-arrow-alt-left mr-3"></i>Abel Tasman National Park </a>
+<a class="next" href="https://geo6371.github.io/nz/">Wellington<i class="fas fa-long-arrow-alt-right ml-3"></i> </a>
 </nav>
 </footer>
 </body>
