--- a/nz/index.html
+++ b/nz/index.html
@@ -5,6 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device.width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Roboto+Condensed:ital@0;1&display=swap" rel="stylesheet"> 
 <link rel="stylesheet" href="style.css">
     <title>NZJ: Picton</title>
 </head>
@@ -19,7 +21,7 @@
        target="_blank"></a>
        <address>
         <a href="https://www.instagram.com/dontstealmyspots_/" target="_blank"><i class="fab fa-instagram mr-3"></i>Instagram</a> - 
-        <a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank"><i class="fas fa-envelope-square"></i>Mail</a>  -
+        <a href="mailto:maximilian.w.ender@student.uibk.ac.at" target="_blank"><i class="fas fa-envelope-square mr-3"></i>Mail</a>  -
         <a href="https://github.com/maximilianender/maximilianender.github.io" target="_blank"><i class="fab fa-github mr-3"></i>Github Repos</a>
         </address>
     </nav>
