fotos auf device-größen angepasst

--- a/nz/index.html
+++ b/nz/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header>
-<img src="images/header.jpg" alt="Picton Harbour">
+<img class="banner" src="images/header.jpg" alt="Picton Harbour">
     <p><a class="white" href="https://commons.wikimedia.org/wiki/File:South_Island_Tour_932.jpg" target="_blank"> <i class="fas fa-camera mr-3"></i>Kiwi Sonja</a></p>
     <h1>New Zealand Journey: Picton/Waitohi</h1>
     <nav>
